1 - After registration add button to Main menu 2 - Make button All records under type of activity 3 - Delete check on message contact in Bot.java