@@ -21,11 +21,9 @@ public class HandleClientImpl implements Handle {
 
     @Override
     public InlineKeyboardMarkup createInlineKeyboard() {
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
-        List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
         TypeOfActivity typeOfActivity = new TypeOfActivity();
-        buttons.add(Arrays.asList(
-                InlineKeyboardButton.builder()
+        List<InlineKeyboardButton> row1 = new ArrayList<>();
+        row1.addAll(List.of(InlineKeyboardButton.builder()
                         .text(typeOfActivity.getCommand("EYEBROWS"))
                         .callbackData("EYEBROWS")
                         .build(),
@@ -36,12 +34,15 @@ public class HandleClientImpl implements Handle {
                 InlineKeyboardButton.builder()
                         .text(typeOfActivity.getCommand("NAILS"))
                         .callbackData("NAILS")
-                        .build(),
-                InlineKeyboardButton.builder()
-                        .text("Мои записи")
-                        .callbackData("ALL_RECORDS")
                         .build()));
-        inlineKeyboardMarkup.setKeyboard(buttons);
-        return inlineKeyboardMarkup;
+        List<InlineKeyboardButton> row2 = new ArrayList<>();
+        row2.add(InlineKeyboardButton.builder()
+                .text("Мои записи")
+                .callbackData("ALL_RECORDS")
+                .build());
+        return InlineKeyboardMarkup.builder()
+                .keyboardRow(row1)
+                .keyboardRow(row2)
+                .build();
     }
 }
